added text-center style to the views

--- a/app/views/coaching/answer.html.erb
+++ b/app/views/coaching/answer.html.erb
@@ -1,15 +1,5 @@
-
-<h1> Your answer is : <%= @search_term %> </h1>
-
-<%= link_to "Ask a new question", ask_path, class: "btn btn-primary"  %>
-
-
-<%if @search_term.downcase == "i am going to work right now!"%>
-<%="Good."%>
-<%elsif @search_term.end_with?("?")%>
-<%="Silly question, get dressed and go to work!"%>
-<%elsif @search_term.end_with?("?")%>
-<%="Silly question, get dressed and go to work!"%>
-<%else%>
-<%="I dont care, get dressed and go to work!"%>
-<%end%>
+<div class = " text-center">
+  <h1> Your question is : <%= @question %> </h1>
+  <%= link_to "Ask a new question", ask_path, class: "btn btn-primary"   %>
+  <%= @answer %>
+</div>
